# Nomikai

./: .gitignore  .gitmodules  README.md  capacitor.config.json  index.html  package-lock.json  package.json  pubspec.yaml  sideload.sh
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/: Podfile  dummy.cpp
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/Runner/: AppDelegate.swift  HevcDumper.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: audio_player_service.dart  discovery_service.dart  hevc_dumper_service.dart  hevc_player_service.dart  telemetry_state.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/: Podfile
macos/Runner/: AudioPlayer.swift  HevcPlayer.swift  Info.plist  MainFlutterWindow.swift  PlaybackSyncClock.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_nomikai.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_nomikai.podspec
rust_builder/windows/: CMakeLists.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: routes.ts  types.ts
src/styles/: index.css
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+19 files in other folders)
